--- a/spring-minikube/Jenkinsfile
+++ b/spring-minikube/Jenkinsfile
@@ -2,8 +2,8 @@ pipeline {
     agent any
 
     parameters {
-        string(name: 'GIT_URL', defaultValue: 'https://github.com/AnithaAnnem/java-minikube.git', description: 'Git repository URL')
-        string(name: 'BRANCH', defaultValue: 'main', description: 'Branch to build')
+        string(name: 'GIT_URL', defaultValue: 'https://github.com/nhatthaiquang-agilityio/spring-minikube.git', description: 'Git repository URL')
+        string(name: 'BRANCH', defaultValue: 'master', description: 'Branch to build')
     }
 
     environment {
@@ -25,7 +25,9 @@ pipeline {
                 then
                     wget https://github.com/gitleaks/gitleaks/releases/download/v8.18.2/gitleaks_8.18.2_linux_x64.tar.gz
                     tar -xvf gitleaks_8.18.2_linux_x64.tar.gz
-                    sudo mv gitleaks /usr/local/bin/
+                    mkdir -p $WORKSPACE/bin
+                    mv gitleaks $WORKSPACE/bin/
+                    export PATH=$WORKSPACE/bin:$PATH
                 fi
                 gitleaks detect --source . --report-path gitleaks-report.json || true
                 '''
@@ -183,10 +185,10 @@ pipeline {
             echo "Pipeline finished. Sending notifications..."
         }
         success {
-            echo " Build, Security Checks & Deployment Successful!"
+            echo "✅ Build, Security Checks & Deployment Successful!"
         }
         failure {
-            echo " Pipeline Failed!"
+            echo "❌ Pipeline Failed!"
         }
     }
 }
