--- a/spring-minikube/Jenkinsfile
+++ b/spring-minikube/Jenkinsfile
@@ -41,19 +41,19 @@ pipeline {
 
         stage('Code Compilation') {
             steps {
-                sh 'mvn clean compile -f student-service/pom.xml'
-                sh 'mvn clean compile -f rating-service/pom.xml'
+                sh 'mvn clean compile -f spring-minikube/student-service/pom.xml'
+                sh 'mvn clean compile -f spring-minikube/rating-service/pom.xml'
             }
         }
 
         stage('Unit Testing & Coverage') {
             steps {
-                sh 'mvn test jacoco:report -f student-service/pom.xml'
-                sh 'mvn test jacoco:report -f rating-service/pom.xml'
+                sh 'mvn test jacoco:report -f spring-minikube/student-service/pom.xml'
+                sh 'mvn test jacoco:report -f spring-minikube/rating-service/pom.xml'
             }
             post {
                 always {
-                    junit '**/target/surefire-reports/*.xml'
+                    junit 'spring-minikube/**/target/surefire-reports/*.xml'
                 }
             }
         }
@@ -66,14 +66,14 @@ pipeline {
 
                     # Student Service
                     mvn sonar:sonar \
-                        -f student-service/pom.xml \
+                        -f spring-minikube/student-service/pom.xml \
                         -Dsonar.projectKey=student-service \
                         -Dsonar.host.url=$SONAR_HOST_URL \
                         -Dsonar.login=$SONAR_AUTH_TOKEN
 
                     # Rating Service
                     mvn sonar:sonar \
-                        -f rating-service/pom.xml \
+                        -f spring-minikube/rating-service/pom.xml \
                         -Dsonar.projectKey=rating-service \
                         -Dsonar.host.url=$SONAR_HOST_URL \
                         -Dsonar.login=$SONAR_AUTH_TOKEN
@@ -84,12 +84,12 @@ pipeline {
 
         stage('Dependency Scanning') {
             steps {
-                sh 'mvn org.owasp:dependency-check-maven:check -f student-service/pom.xml'
-                sh 'mvn org.owasp:dependency-check-maven:check -f rating-service/pom.xml'
+                sh 'mvn org.owasp:dependency-check-maven:check -f spring-minikube/student-service/pom.xml'
+                sh 'mvn org.owasp:dependency-check-maven:check -f spring-minikube/rating-service/pom.xml'
             }
             post {
                 always {
-                    archiveArtifacts artifacts: '**/target/dependency-check-report.html', allowEmptyArchive: true
+                    archiveArtifacts artifacts: 'spring-minikube/**/target/dependency-check-report.html', allowEmptyArchive: true
                 }
             }
         }
@@ -97,8 +97,8 @@ pipeline {
         stage('Build Docker Images') {
             steps {
                 sh '''
-                docker build -t student-service:latest student-service/
-                docker build -t rating-service:latest rating-service/
+                docker build -t student-service:latest spring-minikube/student-service/
+                docker build -t rating-service:latest spring-minikube/rating-service/
                 '''
             }
         }
@@ -119,11 +119,9 @@ pipeline {
                     sudo apt-get install -y trivy
                 fi
 
-                # Scan images and generate TXT reports
+                # Scan images and generate TXT & JSON reports
                 trivy image --exit-code 0 --format table -o student-service-trivy-report.txt student-service:latest
                 trivy image --exit-code 0 --format table -o rating-service-trivy-report.txt rating-service:latest
-
-                # Generate JSON reports for advanced reporting
                 trivy image --exit-code 0 --format json -o student-service-trivy-report.json student-service:latest
                 trivy image --exit-code 0 --format json -o rating-service-trivy-report.json rating-service:latest
                 '''
@@ -138,11 +136,11 @@ pipeline {
         stage('Deploy to Minikube') {
             steps {
                 sh '''
-                kubectl apply -f devops/deployment-student.yml
-                kubectl apply -f devops/service-student.yml
-                kubectl apply -f devops/deployment-rating.yml
-                kubectl apply -f devops/service-rating.yml
-                kubectl apply -f devops/ingress.yml
+                kubectl apply -f spring-minikube/devops/deployment-student.yml
+                kubectl apply -f spring-minikube/devops/service-student.yml
+                kubectl apply -f spring-minikube/devops/deployment-rating.yml
+                kubectl apply -f spring-minikube/devops/service-rating.yml
+                kubectl apply -f spring-minikube/devops/ingress.yml
                 '''
             }
         }
@@ -159,13 +157,12 @@ pipeline {
                     sudo apt-get install -y zaproxy
                 fi
 
-                # Target URL (update if ingress exposes a different host)
                 TARGET_URL="http://localhost"
 
                 # Run ZAP Baseline Scan
                 zap-baseline.py -t $TARGET_URL -r zap-report.html -J zap-report.json || true
 
-                # Optional: generate full HTML report from JSON using zap-cli
+                # Optional: generate full HTML report
                 if command -v zap-cli &> /dev/null
                 then
                     zap-cli report -o zap-report-full.html -f html
