--- a/spring-minikube/devops/service-rating.yml
+++ b/spring-minikube/devops/service-rating.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: rating-service
 spec:
-  clusterIP: None
+  type: NodePort         # change here
   selector:
     run: rating-service
   ports:
@@ -11,3 +11,4 @@ spec:
       protocol: TCP
       port: 5000
       targetPort: 5000
+      nodePort: 30002    # assign a free port
