--- a/spring-minikube/Jenkinsfile
+++ b/spring-minikube/Jenkinsfile
@@ -10,6 +10,7 @@ pipeline {
         SONARQUBE_ENV = 'sonar-java'
         SONAR_AUTH_TOKEN = credentials('anitha-sonar')
         KUBECONFIG = '/var/lib/jenkins/.kube/config'
+        DOCKERHUB_USER = "anithaannem"
     }
 
     stages {
@@ -20,36 +21,56 @@ pipeline {
             }
         }
 
-        stage('Package Student Service') {
+        stage('Credential Scanning - Gitleaks') {
             steps {
-                sh 'mvn clean package -f spring-minikube/student-service/pom.xml'
-            }
-        }
-
-        stage('Package Rating Service') {
-            steps {
-                sh 'mvn clean package -f spring-minikube/rating-service/pom.xml'
-            }
-        }
-
-        stage('Unit Test Student Service') {
-            steps {
-                sh 'mvn test -f spring-minikube/student-service/pom.xml'
+                sh '''
+                echo "Running Gitleaks..."
+                if ! command -v gitleaks &> /dev/null
+                then
+                    wget https://github.com/gitleaks/gitleaks/releases/download/v8.18.2/gitleaks_8.18.2_linux_x64.tar.gz
+                    tar -xvf gitleaks_8.18.2_linux_x64.tar.gz
+                    mkdir -p $WORKSPACE/bin
+                    mv gitleaks $WORKSPACE/bin/
+                    export PATH=$WORKSPACE/bin:$PATH
+                fi
+                gitleaks detect --source . --report-path gitleaks-report.json || true
+                '''
             }
             post {
                 always {
-                    junit 'spring-minikube/student-service/target/surefire-reports/*.xml'
+                    archiveArtifacts artifacts: 'gitleaks-report.json', allowEmptyArchive: true
                 }
             }
         }
 
+        stage('Package Student Service') {
+            steps { sh 'mvn clean package -f spring-minikube/student-service/pom.xml' }
+        }
+
+        stage('Package Rating Service') {
+            steps { sh 'mvn clean package -f spring-minikube/rating-service/pom.xml' }
+        }
+
+        stage('Unit Test Student Service') {
+            steps { sh 'mvn test -f spring-minikube/student-service/pom.xml' }
+            post { always { junit 'spring-minikube/student-service/target/surefire-reports/*.xml' } }
+        }
+
         stage('Unit Test Rating Service') {
+            steps { sh 'mvn test -f spring-minikube/rating-service/pom.xml' }
+            post { always { junit 'spring-minikube/rating-service/target/surefire-reports/*.xml' } }
+        }
+
+        stage('Dependency Scanning') {
             steps {
-                sh 'mvn test -f spring-minikube/rating-service/pom.xml'
+                sh '''
+                mvn org.owasp:dependency-check-maven:check -f spring-minikube/student-service/pom.xml -DfailBuildOnCVSS=11 || true
+                mvn org.owasp:dependency-check-maven:check -f spring-minikube/rating-service/pom.xml -DfailBuildOnCVSS=11 || true
+                '''
             }
             post {
                 always {
-                    junit 'spring-minikube/rating-service/target/surefire-reports/*.xml'
+                    archiveArtifacts artifacts: 'spring-minikube/**/target/dependency-check-report.html', allowEmptyArchive: true
                 }
             }
         }
@@ -137,14 +158,37 @@ pipeline {
             }
         }
 
+        stage('DAST - OWASP ZAP Scan') {
+            steps {
+                sh '''
+                echo "Running OWASP ZAP DAST Scan..."
+                MINIKUBE_IP=$(minikube ip)
+                TARGET_STUDENT="http://$MINIKUBE_IP:30001/student"
+                TARGET_RATING="http://$MINIKUBE_IP:30002/rating"
+
+                kubectl --kubeconfig=$KUBECONFIG wait --for=condition=ready pod -l run=student-service --timeout=60s
+                kubectl --kubeconfig=$KUBECONFIG wait --for=condition=ready pod -l run=rating-service --timeout=60s
+
+                docker run --rm -v $WORKSPACE:/zap/wrk/:rw owasp/zap2docker-stable zap-baseline.py \
+                    -t $TARGET_STUDENT -r zap-student-report.html -J zap-student-report.json || true
+
+                docker run --rm -v $WORKSPACE:/zap/wrk/:rw owasp/zap2docker-stable zap-baseline.py \
+                    -t $TARGET_RATING -r zap-rating-report.html -J zap-rating-report.json || true
+                '''
+            }
+            post {
+                always {
+                    archiveArtifacts artifacts: 'zap-*-report.*', allowEmptyArchive: true
+                    publishHTML([allowMissing: false, alwaysLinkToLastBuild: true, keepAll: true,
+                        reportDir: '.', reportFiles: 'zap-*-report.html', reportName: 'OWASP ZAP Report'])
+                }
+            }
+        }
+
     }
 
     post {
-        success {
-            echo " Build, Analysis, Docker Push & Deployment Successful!"
-        }
-        failure {
-            echo " Pipeline Failed!"
-        }
+        success { echo " Pipeline Successful: Build, Analysis, Docker Push & Deployment Completed!" }
+        failure { echo " Pipeline Failed!" }
     }
 }
